--- a/continuous_integration/environment-windows.yml
+++ b/continuous_integration/environment-windows.yml
@@ -30,6 +30,6 @@ dependencies:
   - fsspec
   - pip
   - pip:
-      - git+https://github.com/dask/dask.git@master
+      - git+https://github.com/ian-r-rose/dask.git@merge-annotations
       - git+https://github.com/joblib/joblib.git@master
       - git+https://github.com/dask/zict.git@master
